rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x743_1998-TC1_TimeRepresentation.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x743_1998-TC1_TimeRepresentation.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod time_representation {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct ClockTime {
        pub time: TimeStamp,
        #[rasn(identifier = "leapSeconds")]
        pub leap_seconds: CumLeapSeconds,
        #[rasn(identifier = "localTimeZone")]
        pub local_time_zone: TimeZone,
    }
    impl ClockTime {
        pub fn new(
            time: TimeStamp,
            leap_seconds: CumLeapSeconds,
            local_time_zone: TimeZone,
        ) -> Self {
            Self {
                time,
                leap_seconds,
                local_time_zone,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("0..=65536"))]
    pub struct CumLeapSeconds(pub u32);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("-128..=127"))]
    pub struct Epochs(pub i8);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("0..=281474976710655"))]
    pub struct MaximumErrorInNanoseconds(pub u64);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("0..=999999999"))]
    pub struct Nanoseconds(pub u32);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("0..=4294967295"))]
    pub struct Seconds(pub u32);
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum TimeDifferenceSign {
        positive = 0,
        negative = 1,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct TimeDifference {
        pub sign: TimeDifferenceSign,
        pub epochs: Epochs,
        pub seconds: Seconds,
        pub nanoseconds: Nanoseconds,
        #[rasn(identifier = "maximumError")]
        pub maximum_error: MaximumErrorInNanoseconds,
    }
    impl TimeDifference {
        pub fn new(
            sign: TimeDifferenceSign,
            epochs: Epochs,
            seconds: Seconds,
            nanoseconds: Nanoseconds,
            maximum_error: MaximumErrorInNanoseconds,
        ) -> Self {
            Self {
                sign,
                epochs,
                seconds,
                nanoseconds,
                maximum_error,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct TimeInterval {
        pub epochs: Epochs,
        pub seconds: Seconds,
        pub nanoseconds: Nanoseconds,
    }
    impl TimeInterval {
        pub fn new(epochs: Epochs, seconds: Seconds, nanoseconds: Nanoseconds) -> Self {
            Self {
                epochs,
                seconds,
                nanoseconds,
            }
        }
    }
    #[doc = " Represents minutes east of GMT."]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct TimeStamp {
        pub epoch: Epochs,
        pub second: Seconds,
        pub nanosecond: Nanoseconds,
        #[rasn(identifier = "maximumError")]
        pub maximum_error: MaximumErrorInNanoseconds,
    }
    impl TimeStamp {
        pub fn new(
            epoch: Epochs,
            second: Seconds,
            nanosecond: Nanoseconds,
            maximum_error: MaximumErrorInNanoseconds,
        ) -> Self {
            Self {
                epoch,
                second,
                nanosecond,
                maximum_error,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("-780..=781"))]
    pub struct TimeZone(pub i16);
}
