rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x744_1996_BackupRestoreASN1Module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x744_1996_BackupRestoreASN1Module.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod backup_restore_asn1_module {
    extern crate alloc;
    use super::attribute_asn1_module::ManagementExtension;
    use super::cmip_1::ObjectInstance;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = "supporting productions"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct BackupArgument {
        #[rasn(tag(context, 0), identifier = "backupDestination")]
        pub backup_destination: BackupDestination,
        #[rasn(tag(context, 1), identifier = "additionalInfo")]
        pub additional_info: Option<SetOf<ManagementExtension>>,
    }
    impl BackupArgument {
        pub fn new(
            backup_destination: BackupDestination,
            additional_info: Option<SetOf<ManagementExtension>>,
        ) -> Self {
            Self {
                backup_destination,
                additional_info,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum BackupDestination {
        localObject(ObjectInstance),
        inLine(()),
        offLine(GraphicString),
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum BackupReplyReply {
        success(()),
        inLine(BitString),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct BackupReply {
        #[rasn(tag(context, 0))]
        pub reply: BackupReplyReply,
        #[rasn(tag(context, 1), identifier = "additionalInfo")]
        pub additional_info: Option<SetOf<ManagementExtension>>,
    }
    impl BackupReply {
        pub fn new(
            reply: BackupReplyReply,
            additional_info: Option<SetOf<ManagementExtension>>,
        ) -> Self {
            Self {
                reply,
                additional_info,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct RestoreArgument {
        #[rasn(tag(context, 0), identifier = "restoreSource")]
        pub restore_source: RestoreSource,
        #[rasn(tag(context, 1), identifier = "additionalInfo")]
        pub additional_info: Option<SetOf<ManagementExtension>>,
    }
    impl RestoreArgument {
        pub fn new(
            restore_source: RestoreSource,
            additional_info: Option<SetOf<ManagementExtension>>,
        ) -> Self {
            Self {
                restore_source,
                additional_info,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum RestoreSource {
        localObject(ObjectInstance),
        inLine(BitString),
        offLine(GraphicString),
    }
}
