rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x749_1997_MDMPMF.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x749_1997_MDMPMF.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod mdmpmf {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("1"))]
    pub struct OneToOne(pub u8);
    pub static ACTION_INFO: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 13u32, 7u32]).to_owned());
    pub static ACTION_REPLY: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 13u32, 8u32]).to_owned());
    pub static ACTION_TYPE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 13u32, 4u32]).to_owned());
    #[doc = ""]
    #[doc = "\t\tThe following arcs support the defined policy classes."]
    #[doc = ""]
    pub static ASSERTED_VALUE_IDENTIFIER: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 13u32]).to_owned());
    pub static ERROR_TYPE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 13u32, 2u32]).to_owned());
    pub static EVENT_INFO: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 13u32, 5u32]).to_owned());
    pub static EVENT_REPLY: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 13u32, 6u32]).to_owned());
    pub static MDMPMF_ACTION: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 8u32]).to_owned());
    pub static MDMPMF_ATTRIBUTE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 7u32]).to_owned());
    pub static MDMPMF_FUNCTIONAL_UNIT_PACKAGE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 1u32]).to_owned());
    pub static MDMPMF_MANAGED_OBJECT: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 3u32]).to_owned());
    pub static MDMPMF_NAME_BINDING: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 6u32]).to_owned());
    pub static MDMPMF_NOTIFICATION: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 10u32]).to_owned());
    pub static MDMPMF_PACKAGE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 4u32]).to_owned());
    pub static MDMPMF_PARAMETER: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 5u32]).to_owned());
    pub static MDMPMF_RELATIONSHIP: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 11u32]).to_owned());
    pub static MDMPMF_RELATIONSHIP_MAPPING: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 12u32]).to_owned());
    pub static NOTIFICATION_TYPE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 13u32, 3u32]).to_owned());
    pub static OPERATION_TYPE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 19u32, 13u32, 1u32]).to_owned());
}
