rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x750_1996_DefinitionDirectoryASN1Module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x750_1996_DefinitionDirectoryASN1Module.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod definition_directory_asn1_module {
    extern crate alloc;
    use super::definition_asn1_module::{
        Actions, AndAttributeIds, AttributeGroups, Attributes, ConditionalPackages, Context,
        Create, Delete, DerivedOrWithSyntaxChoice, Identifier, MatchesFor, NamingObjectClass,
        Notifications, OptionallyRegisteredAs, RegisteredAs, SyntaxOrAttribute, TemplateLabel,
        TextualRepresentation, WithSyntax,
    };
    use super::information_framework::*;
    use super::mkmd::{
        MKM_DIRECTORY_ATTRIBUTE_TYPE, MKM_DIRECTORY_NAME_FORM, MKM_DIRECTORY_OBJECT_CLASS,
    };
    use super::selected_attribute_types::{
        BIT_STRING_MATCH, BOOLEAN_MATCH, CASE_EXACT_MATCH, COMMON_NAME,
        DIRECTORY_STRING_FIRST_COMPONENT_MATCH, INTEGER_MATCH,
    };
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct AdditionalInformation {
        #[rasn(identifier = "creationDate")]
        pub creation_date: Option<GeneralizedTime>,
        pub comment: Option<GraphicString>,
    }
    impl AdditionalInformation {
        pub fn new(creation_date: Option<GeneralizedTime>, comment: Option<GraphicString>) -> Self {
            Self {
                creation_date,
                comment,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum InformationStatus {
        active = 0,
        deleted = 1,
        preliminary = 2,
    }
}
