rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x750_1996_DiscoveryASN1Module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x750_1996_DiscoveryASN1Module.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod discovery_asn1_module {
    extern crate alloc;
    use super::cmip_1::{ObjectInstance, RelativeDistinguishedName, Scope};
    use super::repertoire_asn1_module::GdmoObjectClass;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct DiscoveryId(pub GraphicString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct MITSearch {
        pub base: ObjectInstance,
        #[rasn(identifier = "discoveryScope")]
        pub discovery_scope: Scope,
        #[rasn(
            default = "mitsearch_class_request_default",
            identifier = "classRequest"
        )]
        pub class_request: bool,
    }
    impl MITSearch {
        pub fn new(base: ObjectInstance, discovery_scope: Scope, class_request: bool) -> Self {
            Self {
                base,
                discovery_scope,
                class_request,
            }
        }
    }
    fn mitsearch_class_request_default() -> bool {
        false
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct MITSearchResponse(pub SetOf<RootedNameTree>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct NameTree {
        #[rasn(identifier = "rdnInfo")]
        pub rdn_info: RDNInfo,
        pub subordinates: Option<SetOf<NameTree>>,
    }
    impl NameTree {
        pub fn new(rdn_info: RDNInfo, subordinates: Option<SetOf<NameTree>>) -> Self {
            Self {
                rdn_info,
                subordinates,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct RDNInfo {
        pub rdn: RelativeDistinguishedName,
        #[rasn(identifier = "moClass")]
        pub mo_class: Option<GdmoObjectClass>,
    }
    impl RDNInfo {
        pub fn new(rdn: RelativeDistinguishedName, mo_class: Option<GdmoObjectClass>) -> Self {
            Self { rdn, mo_class }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct RootedNameTree {
        #[rasn(identifier = "rootObject")]
        pub root_object: ObjectInstance,
        #[rasn(identifier = "classOfRoot")]
        pub class_of_root: Option<GdmoObjectClass>,
        pub subordinates: Option<SetOf<NameTree>>,
    }
    impl RootedNameTree {
        pub fn new(
            root_object: ObjectInstance,
            class_of_root: Option<GdmoObjectClass>,
            subordinates: Option<SetOf<NameTree>>,
        ) -> Self {
            Self {
                root_object,
                class_of_root,
                subordinates,
            }
        }
    }
}
