rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x750_1996_GrmDefinitionDirectoryASN1Module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x750_1996_GrmDefinitionDirectoryASN1Module.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod grm_definition_directory_asn1_module {
    extern crate alloc;
    use super::definition_asn1_module::TemplateLabel;
    use super::definition_directory_asn1_module::{
        BEHAVIOUR, DERIVED_FROM, MANAGEMENT_TEMPLATE, REGISTERED_AS, REGISTERED_INFORMATION,
    };
    use super::grm_attribute_definition_module::{
        MappedRelationshipClass, MappingPair, RelationshipObject, RoleMappingSpecification,
        RoleSpecifier, SupportedChoice,
    };
    use super::information_framework::*;
    use super::mkmd::{MKM_DIRECTORY_ATTRIBUTE_TYPE, MKM_DIRECTORY_OBJECT_CLASS};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
