rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x750_1996_MKMD.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x750_1996_MKMD.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod mkmd {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static DMI_ATTRIBUTE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 3u32, 2u32, 7u32]).to_owned());
    pub static DMI_NOTIFICATION: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 3u32, 2u32, 10u32]).to_owned());
    pub static MKM_ACTION: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 16u32, 9u32]).to_owned());
    pub static MKM_ATTRIBUTE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 16u32, 7u32]).to_owned());
    pub static MKM_DIRECTORY_ATTRIBUTE_TYPE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 16u32, 0u32, 4u32]).to_owned());
    pub static MKM_DIRECTORY_NAME_FORM: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 16u32, 0u32, 7u32]).to_owned());
    pub static MKM_DIRECTORY_OBJECT_CLASS: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 16u32, 0u32, 6u32]).to_owned());
    pub static MKM_MOBJECT_CLASS: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 16u32, 3u32]).to_owned());
    pub static MKM_NAME_BINDING: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 16u32, 6u32]).to_owned());
    pub static MKM_PACKAGE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 16u32, 4u32]).to_owned());
    pub static MKM_PARAMETER: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 16u32, 5u32]).to_owned());
}
