rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x750_1996_RepertoireDirectoryASN1Module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x750_1996_RepertoireDirectoryASN1Module.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod repertoire_directory_asn1_module {
    extern crate alloc;
    use super::cmip_1::ObjectInstance;
    use super::cmip_a_associate_information::{FunctionalUnits, ProtocolVersion};
    use super::information_framework::*;
    use super::mkmd::{MKM_DIRECTORY_ATTRIBUTE_TYPE, MKM_DIRECTORY_OBJECT_CLASS};
    use super::repertoire_asn1_module::GdmoObjectClass;
    use super::selected_attribute_types::{BIT_STRING_MATCH, BOOLEAN_MATCH};
    use super::selected_object_classes::APPLICATION_ENTITY;
    use super::smase_a_associate_information::FunctionalUnitPackage;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " The \"cMISE\" and \"sMASE\" Directory auxiliary object"]
    #[doc = " classes should be used together with the Directory"]
    #[doc = " structural object class \"applicationEntity\"."]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct InstanceIdList(pub SetOf<ObjectInstance>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct MitMo {
        #[rasn(identifier = "objectClass")]
        pub object_class: GdmoObjectClass,
        pub instances: Option<InstanceIdList>,
    }
    impl MitMo {
        pub fn new(object_class: GdmoObjectClass, instances: Option<InstanceIdList>) -> Self {
            Self {
                object_class,
                instances,
            }
        }
    }
}
